# opw-v2

./: Cargo.toml
art/concept/: concept-1.aseprite
art/items/misc/: wooden-log.aseprite
art/skins/: default-miner-Sheet.aseprite  default-miner.aseprite
art/tilesets/: grassierlands.aseprite  grasslands.aseprite  hahahaha.aseprite  sandy.aseprite  snowy.aseprite  temp.aseprite
art/ui/backgrounds/: menu.aseprite
art/ui/logo/: hahaha_shelley_file.aseprite  logo .aseprite  text-logo.aseprite
art/ui/menu/: button-menu-1.aseprite  button-menu-2.aseprite  menu-buttons.aseprite  play-button.aseprite  play_button_hovered.aseprite  quit-button.aseprite  settings-button.aseprite  tall-slim-panel.aseprite
assets/styles/: main.ess  world_selection.ess
data/: biomes.json  items.json
data/biomes/grasslands/: data.json
data/biomes/sandydunes/: data.json
data/biomes/snowytundra/: data.json
data/skins/default/: data.json
saves/New World AHAHAH/: settings.data
saves/Shelley World/: settings.data
src/: main.rs  states.rs
src/common/: mod.rs
src/common/state_machine/: components.rs  helpers.rs  mod.rs
src/common/ui/: assets.rs  bundles.rs  components.rs  constants.rs  macros.rs  mod.rs  systems.rs
src/game/: events.rs  mod.rs
src/game/animation/: components.rs  helpers.rs  mod.rs
src/game/camera/: components.rs  constants.rs  mod.rs  systems.rs
src/game/common/: mod.rs
src/game/entity_skin/: helpers.rs
src/game/inventory/: components.rs  events.rs  helpers.rs  mod.rs  systems.rs
src/game/items/: components.rs  constants.rs  errors.rs  helpers.rs  mod.rs  resources.rs  systems.rs
src/math/: map.rs  mod.rs  noise.rs
src/menu/: assets.rs  components.rs  constants.rs  events.rs  helpers.rs  mod.rs  resources.rs  systems.rs
(+63 files in other folders)
