[package]
name = "opw-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
rand = "0.8.5"
noise = "0.8.2"
bevy_ecs_tilemap = "0.11"
serde = { version = "1.0.104", features = ["derive"]}
serde_json = "1.0.97"
bevy-inspector-egui = "0.19"
futures-lite = "1.11"
image = "0.24.6"
bevy_framepace = "0.13.3"
anyhow = "1.0.75"
thiserror = "1.0.49"
bevy_asset_loader = "0.17.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
